Test_live_share

--- a/login-register.html
+++ b/login-register.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheets.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="login">
+            <div class="from-login">
+                <input type="user" class="from-control" id="username" placeholder="username">
+            </div>
+        </div>
+    </nav>
+    <footer>
+        <div class="contact-page">
+            <div class="contacr-container">
+                <li>โรงพยาบาลศูนย์การแพทย์ มหาวิทยาลัยวลัยลักษณ์</li>
+                <li>โทร. 0 7547 9999</li>
+                <li>wuh@wu.ac.th</li>            </div>
+        </div>
+    </footer>
 </body>
 </html>
