--- a/login-register.html
+++ b/login-register.html
@@ -16,10 +16,11 @@
     </nav>
     <footer>
         <div class="contact-page">
-            <div class="contacr-container">
+            <div class="contactt-container">
                 <li>โรงพยาบาลศูนย์การแพทย์ มหาวิทยาลัยวลัยลักษณ์</li>
                 <li>โทร. 0 7547 9999</li>
-                <li>wuh@wu.ac.th</li>            </div>
+                <li>wuh@wu.ac.th</li>            
+            </div>
         </div>
     </footer>
 </body>
